--- a/java-spring-ru/spring-tests/src/test/resources/datasets/people.yml
+++ b/java-spring-ru/spring-tests/src/test/resources/datasets/people.yml
@@ -8,3 +8,6 @@ people:
     - first_name: Jassica
       last_name: Simpson
       email: jassika@yahoo.com
+    - first_name: Sergei
+      last_name: Ryabov
+      email: mre@mail.ru
