--- a/java-spring-ru/spring-tests/src/test/resources/datasets/people.yml
+++ b/java-spring-ru/spring-tests/src/test/resources/datasets/people.yml
@@ -5,6 +5,6 @@ people:
     - first_name: Jack
       last_name: Doe
       email: jack@mail.com
-    - first_name: Sergei
-      last_name: Ryabov
-      email: mre@mail.ru
+    - first_name: Jassica
+      last_name: Simpson
+      email: jassika@yahoo.com
