--- a/java-spring-ru/relations/build.gradle
+++ b/java-spring-ru/relations/build.gradle
@@ -13,7 +13,7 @@ repositories {
 }
 
 dependencies {
-  implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+//  implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
   implementation(
           'org.springframework.boot:spring-boot-starter-web',
           'org.springframework.boot:spring-boot-starter-data-jpa',
@@ -63,6 +63,3 @@ liquibase {
     }
   }
 }
-
-
-
