--- a/java-spring-ru/open-api/build.gradle
+++ b/java-spring-ru/open-api/build.gradle
@@ -5,7 +5,7 @@ plugins {
   id 'com.adarshr.test-logger' version '3.0.0'
   id "com.github.johnrengelman.processes" version "0.5.0"
   // BEGIN
-  
+  id "org.springdoc.openapi-gradle-plugin" version "1.6.0"
   // END
 }
 
@@ -20,7 +20,7 @@ dependencies {
   implementation 'org.liquibase:liquibase-core'
 
   // BEGIN
-  
+  implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
   // END
 
   runtimeOnly 'com.h2database:h2:2.1.214'
